# freeage

./: .gitignore  CMakeLists.txt  COPYING  Readme.md
.github/workflows/: ccpp.yml
resources/: free_age.rc  free_age.xcf  resources.qrc
src/FreeAge/: FreeAge.h  Sprite.cc  Sprite.h  SpriteAtlas.cpp  SpriteAtlas.h  client_building.cpp  client_building.h  client_unit.cpp  client_unit.h  free_age.h  game_dialog.cpp  game_dialog.h  health_bar.cpp  health_bar.h  main.cc  main_server.cpp  map.cpp  map.h  messages.cpp  messages.h  opengl.cc  opengl.h  render_window.cpp  render_window.h  server_connection.cpp  server_connection.h  settings_dialog.cpp  settings_dialog.h  shader_health_bar.cpp  shader_health_bar.h  shader_program.cpp  shader_program.h  shader_sprite.cpp  shader_sprite.h  shader_terrain.cpp  shader_terrain.h  sprite.cc  sprite.h  sprite_atlas.cpp  sprite_atlas.h  (+5 more)
src/FreeAge/client/: about_dialog.cpp  about_dialog.hpp  building.cpp  building.hpp  command_button.cpp  command_button.hpp  decal.cpp  decal.hpp  game_controller.cpp  game_controller.hpp  game_dialog.cpp  game_dialog.hpp  health_bar.cpp  health_bar.hpp  lobby_dialog.cpp  lobby_dialog.hpp  main.cpp  map.cpp  map.hpp  match.cpp  match.hpp  minimap.cpp  minimap.hpp  mod_manager.cpp  mod_manager.hpp  object.cpp  object.hpp  opaqueness_map.cpp  opaqueness_map.hpp  opengl.cpp  opengl.hpp  render_utils.cpp  render_utils.hpp  render_window.cpp  render_window.hpp  server_connection.cpp  server_connection.hpp  settings_dialog.cpp  settings_dialog.hpp  shader_color_dilation.cpp  (+27 more)
src/FreeAge/common/: building_types.cpp  building_types.hpp  civilizations.cpp  civilizations.hpp  damage.cpp  damage.hpp  free_age.hpp  game_data.hpp  logging.hpp  messages.cpp  messages.hpp  modifications.cpp  modifications.hpp  object_types.hpp  player.cpp  player.hpp  resources.hpp  technologies.cpp  technologies.hpp  timing.cpp  timing.hpp  type_info.cpp  type_stats.hpp  type_stats_data.cpp  type_stats_data.hpp  unit_types.cpp  unit_types.hpp  util.hpp
src/FreeAge/server/: building.cpp  building.hpp  game.cpp  game.hpp  main.cpp  map.cpp  map.hpp  match_setup.cpp  match_setup.hpp  object.cpp  object.hpp  pathfinding.cpp  pathfinding.hpp  settings.hpp  unit.cpp  unit.hpp
src/FreeAge/test/: test.cpp
src/RectangleBinPack/: MaxRectsBinPack.cpp  MaxRectsBinPack.h  Rect.cpp  Rect.h
